app/assets/stylesheets/store.css.scss
// Place all the styles related to the store controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.store {
  
  #myCarousel{
    margin-left: 20px;
    height: 250px;
    background-color: #880000; 
    
    .carousel-content{
      margin-top: 50px;
      font-family: Georgia;
      font-size:30px;
      color:  #DDDDDD;
    }
    
    img {
      width: 240px;
      height: 240px;
      margin-top: 5px;
      margin-right: 20px;  
    }
    
  }

  #order_by{
    width: 70px;
  }
  
  #entry{
    
    overflow: auto;
    border-top: 3px dotted #666666;
    min-height: 100px;
    color: #0066FF;
    
    ul li{
      margin-top: 20px;
      width: 30%;
      height: 500px;
    }

    img {
      width: 220px;
      height: 280px;
      margin-bottom: 10px;  
    } 
        
    #entry_item{
      color: #0000FF;
            
      p, .button_to{
        margin-left: 12px;
        font-size: bold;
      }
      
      #description{
        color: #444444;
      } 
      
      a {
        color: #FF8800;
        font-size: 120%;
        margin-left: 12px;
      }
      
      a:hover{
        color: #444444;
        background-color: white;
      }
    }
    
  }
  
}

